# hyperliquid-cli

./: .env.example  .gitignore  ACTION-ITEMS.md  AGENT-CONTEXT.md  CLAUDE.md  PLAN.md  README.md  hl-cli-feature-audit.md  pyproject.toml
.claude/skills/: settings.json
config/: active_config.example.json
deploy/: Dockerfile  README.md  hl-agent.service
docs/: architecture.md  cli.md  decisions.md  evidence-gate.md  handover.md  modules.md  setup.md
hlcli/: __init__.py  __main__.py  _lazy.py
hlcli/accounts/: keystore.py  store.py
hlcli/agent/: __init__.py  daily.py  intake_watch.py  liveness.py  supervisor.py
hlcli/cli/: app.py  context.py  errors.py  output.py  repl.py  stubs.py  watch.py
hlcli/core/: backoff.py  config.py  config_schema.py  llm.py  network.py  types.py
hlcli/exchange/: base.py  factory.py  hyperliquid.py  marks.py  paper.py  rounding.py
hlcli/executor/: decision.py  enrich.py  execute.py  gate.py  intake.py  monitor.py  protect.py  reconcile.py  regime.py  resolve.py  rmath.py  runner.py
hlcli/journal/: __init__.py  digest.py  lessons.py  narrative.py  writer.py
hlcli/safety/: alerts.py  breaker.py  graduation.py
hlcli/sentry/: __init__.py  adopt.py  apply.py  context.py  decision.py  engine.py  gate.py  live.py  shadow.py
hlcli/state/: store.py
hlcli/tests/: _helpers.py  test_accounts.py  test_adopt.py  test_agent_intake.py  test_agent_supervisor.py  test_alerts.py  test_breaker.py  test_cli.py  test_config_schema.py  test_decision.py  test_executor.py  test_gate.py  test_graduation.py  test_hyperliquid_parse.py  test_llm.py  (+21 more)
(+28 files in other folders)
