[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid-cli"
version = "0.0.0"
description = "Python CLI for trading on Hyperliquid — manual orders + an LLM executor inside a deterministic risk gate."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",            # public /info reads (marks, book) — needed in paper mode
]

# Live-exchange and LLM deps are kept OUT of the core install on purpose:
# `paper` mode and the test suite must run with no keys or signing libs present.
# They are lazy-imported (see hlcli/_lazy.py) and only required for their phase.
[project.optional-dependencies]
exchange = [
    "hyperliquid-python-sdk>=0.9",
    "eth-account>=0.11",
    "websocket-client>=1.7",
]
llm = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8",
]

[project.scripts]
hl = "hlcli.__main__:main"

[tool.setuptools.packages.find]
include = ["hlcli*"]

[tool.pytest.ini_options]
testpaths = ["hlcli/tests"]
